# centrifugo-ws-chat

./: .gitignore  README.md  compose.yaml  dev_compose.yaml
app/: Dockerfile  pyproject.toml
app/chat/: __main__.py  centrifugo.py  db.py  models.py  routes.py  settings.py
app/static/: style.css
app/templates/: index.html
centrifugo/: config.json
nginx/: nginx.conf
