[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.6",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "uvicorn>=0.34.3",
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
 
[tool.ruff.format]
docstring-code-format = true
 
[tool.ruff.lint]
select = ["ALL"]
ignore = ["EM", "FBT", "TRY003", "D1", "D203", "D213", "G004", "FA", "COM812", "ISC001"]
 
[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = []
lines-after-imports = 2
 
[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["S101", "S311"]
 
[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:"]
